--- a/o2- open graf.html
+++ b/o2- open graf.html
@@ -9,6 +9,9 @@
     <title  prefix="og: http://ogp.me/ns#">open graf</title>
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous"
+     src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v6.0"></script>
     <header>
         <h1>aves de presa</h1>
     </header>
@@ -23,6 +26,9 @@
                      quidem? Ipsam, blanditiis modi eligendi natus ius
                      to animi facere labore veritatis quaerat sed
                       perspiciatis!
+                      <div class="fb-share-button" data-href="https://topdista.github.io/opengrapf/" 
+                      data-layout="button_count" data-size="small"><a target="_blank"
+                       href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftopdista.github.io%2Fopengrapf%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
                 </p>
                 <h5>birds of prey</h5>
             </article>
